feat: Reporting service fixed

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ DB_EXTERNAL_PORT=5436
 APP_PORT=2000
 REDIS_PORT=6380
 REDIS_HOST=changeMe
+CLOUDINARY_CLOUD_NAME=changeMe
+CLOUDINARY_API_KEY=changeMe
+CLOUDINARY_API_SECRET=changeMe
+CLOUDINARY_URL=changeMe
