--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,13 @@
             <artifactId>logback-core</artifactId>
             <version>1.5.23</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.39.0</version>
+        </dependency>
     </dependencies>
 
     <build>
