--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.data.redis.host=${REDIS_HOST:localhost}
 spring.data.redis.port=${REDIS_PORT:6380}
 
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME: dytjj6vac}
+cloudinary.api-key=${CLOUDINARY_API_KEY:529349653643819}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET:K0IOyte7g2Xa6VnKlc8N-iYT6I0}
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
