--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.data.redis.host=${REDIS_HOST:localhost}
 spring.data.redis.port=${REDIS_PORT:6380}
+#spring.cache.redis.time-to-live=600000
 
 cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME:dytjj6vac}
 cloudinary.api-key=${CLOUDINARY_API_KEY:529349653643819}
